SET(EXE_NAME palbeginner)

SET(CPP_NAME "palbeginner.cpp")

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/begin.cpp.in" "${PROJECT_BINARY_DIR}/example/${CPP_NAME}" ESCAPE_QUOTES)

ADD_EXECUTABLE(
	${EXE_NAME}
	"${PROJECT_BINARY_DIR}/example/${CPP_NAME}"
)

TARGET_LINK_LIBRARIES( ${EXE_NAME} libpal )

IF(PAL_STATIC)
	COMPUTE_DEFAULT_ENGINE(PAL_DEFAULT_ENGINE)
	STRING(TOLOWER "libpal_${PAL_DEFAULT_ENGINE}" TARGET_NAME)
	TARGET_LINK_LIBRARIES( ${EXE_NAME} ${TARGET_NAME} )

	# FOREACH(CUR_ENGINE ${PAL_ENGINE_LIST})
		# IF(PAL_BUILD_${CUR_ENGINE} AND ${CUR_ENGINE}_FOUND)
			# STRING(TOLOWER "libpal_${CUR_ENGINE}" CUR_LIB)
			# TARGET_LINK_LIBRARIES( ${EXE_NAME} ${CUR_LIB} )
		# ENDIF(PAL_BUILD_${CUR_ENGINE} AND ${CUR_ENGINE}_FOUND)
	# ENDFOREACH(CUR_ENGINE ${PAL_ENGINE_LIST})
ENDIF(PAL_STATIC)

# Add the postfix to the executable since it is not added automatically as for modules and shared libraries
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

IF(NOT BUILD_OUTPUT_DIR_RELEASE_DEBUG)
	# Ugly workaround to remove the "/debug" or "/release" in each output
	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
ENDIF(NOT BUILD_OUTPUT_DIR_RELEASE_DEBUG)
